# LyingLLM

./: .gitignore  DEPLOYMENT_MANUAL.md  DEVELOPMENT_GUIDE.md  OPERATION_MANUAL.md  README.md  design.md  pyproject.toml  requirements.txt  rule.md
app/agents/: base.py  judge.py  personality.py  prompts.py
app/api/: config.py  game.py  ws.py
app/config/: settings.py
app/core/: engine.py  phase.py
app/llm/: __init__.py  client.py  retry.py
app/models/: __init__.py  event.py  game.py  role.py
app/roles/: __init__.py  seer.py  villager.py
app/rules/: __init__.py
app/storage/: __init__.py  game_log.py
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  parser.py
backend/app/api/: __init__.py  game.py  ws.py
backend/app/config/: __init__.py  loader.py  settings.py
backend/app/core/: __init__.py  engine.py  event_bus.py  state.py
backend/app/llm/: adapter.py  message.py
backend/app/memory/: __init__.py  game_memory.py
backend/app/models/: game.py  player.py
backend/app/roles/: base.py  guard.py  hunter.py  werewolf.py  witch.py
backend/app/rules/: manager.py
backend/app/storage/: game_log.py
backend/configs/: providers.yaml
backend/configs/rules/: classic.yaml
backend/tests/: test_engine.py
configs/: providers.yaml  runtime.yaml
configs/models/: providers.yaml
configs/roles/: classic.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
tasks/: prd-frontend-redesign.md  prd-lyingllm-mvp.md
tests/: test_all.py
(+50 files in other folders)
